@@ -1,5 +1,6 @@
 0.04 20091030
     . Added exists functionality for hashes
+    . added $bridge->appinfo as a convenience function
 
 0.03 20091029
     ! Fixed ->__xpath
